--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Robert Thomitzek <www.thomitzek.com>
 sentence=This Library can be used for Recive and Send Signals to Insta Funkbus devices
 paragraph=InstaFunkbus Library can be used for Recive and Send Signals to Insta Funkbus devices
 category=Device Control
-url=https://InstaFunkbus.org/
+url=https://github.com/Thro42/InstaFunkbus
 architectures=avr2
